<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserRegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fingerprintImageView"
                android:layout_width="200dp"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/black_border" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/UserId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@drawable/black_border"
                    android:ems="14"
                    android:hint="@string/user_id"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:scrollHorizontally="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/Username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@drawable/black_border"
                    android:ems="14"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:scrollHorizontally="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/UserAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@drawable/black_border"
                    android:ems="14"
                    android:hint="@string/user_address"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:scrollHorizontally="true"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/fingerPrintBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:onClick="createFingerPrint"
                        android:text="@string/finger_print"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/addUserBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:onClick="addUser"
                        android:text="@string/add_user"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>